# craftr

./: .gitignore  404.html  MANIFEST.in  build.craftr  index.html  package.yml  pydoc-markdown.yml  pyproject.toml  readme.md  search.html  setup.py  sitemap.xml
.github/workflows/: build.yml
.scratchspace/task/: __init__.py  task.py
api-documentation/craftr.core.actions/: index.html
api-documentation/craftr.core.configurable/: index.html
api-documentation/craftr.core.context/: index.html
api-documentation/craftr.core.error/: index.html
api-documentation/craftr.core.executor/: index.html
api-documentation/craftr.core.plugin/: index.html
api-documentation/craftr.core.project/: index.html
api-documentation/craftr.core.property/: index.html
api-documentation/craftr.core.settings/: index.html
api-documentation/craftr.core.task/: index.html
api-documentation/craftr.core.util/: index.html
craftr-dsl/: .gitignore  MANIFEST.in  package.yml  pydoc-markdown.yml  readme.md  setup.py
craftr-dsl/.changelog/: 0.3.0.yml  0.4.0.yml  0.4.1.yml  0.4.2.yml  0.5.0.yml  0.6.0.yml
craftr-dsl/.github/workflows/: python.yml
craftr-dsl/src/tests/: test_runtime.py  transpiler_test.py
craftr/.changelog/: _unreleased.yml
examples/.build/.craftr-metadata/: task-hashes.json
examples/c/: build.craftr
search/: search_index.json
src/craftr/: __init__.py  __main__.py
src/craftr/bld/: renderers.py  system.py
src/craftr/core/: __init__.py  _context.py  _execute.py  _extension.py  _plugins.py  _project.py  _settings.py  _settings_test.py  (+10 more)
src/craftr_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/craftr_license/: __init__.py  _dejacode.py  _license.py
src/craftr_python/: __init__.py  _base.py  _flit.py  _isort.py  _model.py  _mypy.py  _pytest.py  _python.py  _style.py  _utils.py  _yapf.py
src/test/: test_craftr_core_property_typechecking.py
(+113 files in other folders)
