[project]
name = "craftr"
readme = "readme.md"
requires-python = ">=3.9.0,<4.0.0"
dependencies = [ "astor >=0.8.1,<1.0.0", "dataclasses >=0.6.0,<1.0.0", "nr.caching >=0.4.0,<1.0.0", "nr.functional >=0.1.0,<1.0.0", "nr.parsing.core >=2.0.2,<3.0.0", "nr.preconditions >=0.0.4,<1.0.0", "nr.pylang.ast >=0.0.5,<0.1.0", "termcolor >=1.1.0,<2.0.0", "typing-extensions >=3.10.0.0,<4.0.0", "nr.pylang.utils >=0.1.3,<1.0.0", "beartype >=0.9.1,<1.0.0", "loguru >=0.5.3,<1.0.0", "localimport >=1.7.3,<2.0.0",]
dynamic = [ "version", "description",]
[[project.authors]]
name = "Niklas Rosenstein"
email = "rosensteinniklas@gmail.com"

[metadata]
dist-name = "craftr-build"

[build-system]
requires = [ "flit_core >=3.2",]
build-backend = "flit_core.buildapi"

[project.urls]
Source = "https://github.com/craftr-build/craftr"

[project.scripts]
craftr = "craftr.__main__:main"

[project.optional-dependencies]
test = [ "mypy", "pytest", "types-termcolor", "types-toml",]

[tool.isort]
lines_before_imports = 1
order_by_type = true
indent = "  "
line_length = 120

[tool.mypy]
pretty = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_error_codes = true

[tool.yapf]
BASED_ON_STYLE = "pep8"
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = true
ALLOW_MULTILINE_LAMBDAS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
BLANK_LINE_BEFORE_MODULE_DOCSTRING = true
BLANK_LINES_AROUND_TOP_LEVEL_DEFINITION = 2
COALESCE_BRACKETS = true
CONTINUATION_ALIGN_STYLE = "VALIGN-RIGHT"
CONTINUATION_INDENT_WIDTH = 2
DEDENT_CLOSING_BRACKETS = true
INDENT_CLOSING_BRACKETS = false
INDENT_WIDTH = 2
COLUMN_LIMIT = 120

[project.entry-points.craftr_plugins]
python = "craftr_python:registry"
license = "craftr_license:registry"
